# easycad

./: .gitignore  Cargo.toml  README.md  floorplan.cad  front_view.cad  notes.md
legacy/: lib.rs
src/: challange.wgsl  lib.rs  line.wgsl  main.rs  shader.wgsl
src/assets/: circle.wgsl  line.wgsl  xy_axis.wgsl
src/compiler/: compiler.rs
src/events/: input.rs
src/graphics/: camera.rs  gui.rs  gui_elements.rs  gui_example.rs  mod.rs  pipeline.rs  renderer.rs  ui.rs  vertex.rs
src/model/: circle.rs  line.rs
