[package]
name = "easycad"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
# was 22.0
wgpu = "22.0"
egui = "0.26"
egui-wgpu = "0.26"
egui-winit = "0.26"
instant = "0.1"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }

