[package]
name = "easycad"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
egui-wgpu = "0.27.2"
wgpu = "0.19.4"
egui-winit = "0.27.2"
egui = "0.27.2"
instant = "0.1"
pollster = "0.3"
dxf = "0.5"
bytemuck = { version = "1.16", features = [ "derive" ] }
rfd = "0.15.3"
regex = "1.12.2"
